fix: show hero image on iOS Safari by removing fixed background-attachment on mobile

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -7,7 +7,7 @@
   min-height: 650px;
   background-position: center center;
   background-size: cover;
-  background-attachment: fixed;
+  background-attachment: scroll;
   background-color: #1a1714;
   display: flex;
   align-items: center;
@@ -103,6 +103,7 @@
   .banner-root {
     min-height: 720px;
     background-position: center;
+    background-attachment: fixed;
   }
 
   .banner-content {
